# AnnonymousMessage

auth_service/: .env  Cargo.toml
auth_service/migration/: Cargo.toml
auth_service/migration/src/: lib.rs  m20240402_000001_create_table_user.rs
auth_service/src/: ctx  error.rs  main.rs  model.rs
auth_service/src/core/: mod.rs
auth_service/src/core/entities/: user.rs
auth_service/src/core/services/: mod.rs  password_service.rs  user_service.rs
auth_service/src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_user.rs  token_manager.rs
auth_service/tests/: quick_dev.rs
