[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tower-http = {version = "0.5", features = ["fs"]}
tower-cookies = "0.10.0"
lazy-regex = "2"
async-trait = "0.1"
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
dotenvy = "0.15.7"
rust-argon2 = "2.1"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"